[package]
edition = "2021"
name = "tracing"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.1", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
